--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div>
               <i class="fa-brands fa-x-twitter"></i>
-              <a href="">twitter</a>
+              <a href="https://x.com/padrethefather">twitter</a>
             </div>
             <div>
               <i class="fa-solid fa-envelope"></i>
