--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="socials" data-testid="socialLinks">
             <div>
               <i class="fa-brands fa-github-alt"></i>
-              <a href="https://github.com/">github</a>
+              <a href="https://github.com/afekhaijoseph">github</a>
               <p></p>
             </div>
             <div>
